# unoty

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  doxygen_config  run.sh
debug_app/: main.cc  (+2 more)
engine/: CMakeLists.txt  EngineTests.cmake
engine/cmake/: EngineTests.cmake  WIN32.cmake
engine/cmake/modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
engine/include/data_handler/: data_object.h  serializer.h  serializer_interface.h
engine/include/data_handler/file_handler/: file_handler.h
engine/include/engine/: engine.h  engine_config.h  physics.h  renderer.h
engine/include/entities/: animator.h  audio_source.h  behaviour_script.h  camera.h  component.h  fixture.h  foresight_camera.h  game_object.h  light_source.h  particle.h  particle_emitter.h  rigid_body.h  scene.h  scene_callback_function.h  sprite.h  transform.h
engine/include/entities/artificial_intelligence/: artificial_intelligence.h  circle_path_around_object_ai.h  find_path_to_object_ai.h  player_turret.h
engine/include/entities/colliders/: box_collider.h  circle_collider.h  collider.h  polygon_collider.h
engine/include/entities/listeners/: gamepad_listener.h  key_listener.h  listener.h  mouse_listener.h
engine/include/entities/particle_emitters/: explosion_emitter.h  firework_emitter.h  firework_particle.h  particle.h  particle_emitter.h  spiral_emitter.h
engine/include/entities/physics/: box_collider.h  circle_collider.h  collider.h  rigid_body.h
engine/include/entities/scene/: scene.h  scene_background.h  scene_callback_function.h  scene_lighting.h
engine/include/entities/structs/: color.h  debug_info.h  element_position.h  gamepad_button.h  input.h  key.h  physics_config.h  point.h  precise_point.h  rectangle.h  rigid_body_type.h  sprite_animation_state.h  sprite_flip.h  vector.h  vector_2d.h
engine/include/entities/ui/: button.h  text.h  ui_button.h  ui_button_callback_function.h  ui_object.h  ui_text.h
engine/include/helpers/: debug.h  path_helper.h
engine/include/physics/: physics_engine.h
engine/include/rendering/: renderer.h  sprite_renderer.h  text_renderer.h
engine/include/utility/: debug.h  object_pool.h  path_helper.h  randomizer.h  timer.h
engine/src/audio/: audio.h  audio_factory.cc  audio_factory.h  audio_factory_base.h  audio_factory_wrapper.cc  audio_factory_wrapper.h  null_audio.h  sdl2_audio.cc  sdl2_audio.h
engine/src/audio/sdl_audio/: sdl_audio_manager.cc  sdl_audio_manager.h  sdl_chunk_audio_wav.cc  sdl_chunk_audio_wav.h  sdl_music_audio_mp3.cc  sdl_music_audio_mp3.h
engine/src/audio/sdl_mixer/: sdl_mixer_adapter.cc  sdl_mixer_adapter.h  sdl_music_wrapper.cc  sdl_music_wrapper.h  sdl_sound_effect_wrapper.cc  sdl_sound_effect_wrapper.h
engine/src/data_handler/data_object/: data_object.cc
engine/src/data_handler/file_handler/: file_handler.cc  file_handler.h
engine/src/data_handler/serializer/: serializer.cc
engine/src/engine/: engine.cc  engine_config.cc  engine_tick.cc  engine_tick.h  scene_manager.cc  scene_manager.h
engine/src/entities/: animator.cc  audio_source.cc  behaviour_script.cc  camera.cc  foresight_camera.cc  game_object.cc  light_source.cc  particle.cc  particle_emitter.cc  scene.cc  sprite.cc  transform.cc
engine/src/entities/artificial_intelligence/: a_star_path_node.h  ai_base.h  circle_path_around_object_ai.cc  find_path_to_object_ai.cc  player_turret.cc
engine/src/entities/colliders/: box_collider.cc  circle_collider.cc
engine/src/entities/listeners/: gamepad_listener.cc  key_listener.cc  mouse_listener.cc
engine/src/entities/physics/: box_collider.cc  circle_collider.cc  rigid_body.cc
engine/src/entities/scene/: scene.cc  scene_background.cc  scene_lighting.cc  scene_manager.cc  scene_manager.h  scene_object_registry.cc  (+1 more)
engine/src/input/: input.cc  input.h  input_sdl.cc  input_sdl.h  sdl_input.cc  sdl_input.h
engine/src/physics/: box2d_contact_listener.h  box2d_physics_engine.cc  box2d_physics_engine.h  impl_physics.cc  impl_physics.h  physics.h  rigid_body.cc
engine/src/rendering/: sdl_renderer.cc  sdl_renderer.h
engine/src/ui/: ui.h
engine_tests/: CMakeLists.txt
engine_tests/src/entities/: animator_test.cc  camera_test.cc  game_object_test.cc
engine_tests/src/utility/: object_pool_test.cc
slime_shooter/: CMakeLists.txt  game_scene.h  main.cc  menu_scene.h  movement_script.h  test_scene.h
slime_shooter/resources/: default_config.json
slime_shooter/resources/levels/: level_1.json  level_2.json
slime_shooter/src/: debug_toggle_script.h  main.cc
slime_shooter/src/common/: definitions.h
slime_shooter/src/config/: game_config.h  level_editor_config.h  level_loader_config.h  projectile_config.h  stress_test_config.h
slime_shooter/src/enemies/: enemy_attack.h  enemy_logic.h  enemy_object_pool.h  enemy_projectile_object_pool.h  enemy_spawner.h  enemy_spawner_logic.h
slime_shooter/src/experience/: experience.h  experience_logic.h  experience_object_pool.h
slime_shooter/src/particle/: firework.h
slime_shooter/src/player/: ai_demo_marker.h  ai_demo_player.h  ai_demo_player_movement.h  player.h  player_experience.h  player_health.h  player_leveling_effect.h  player_light.h  player_light_logic.h  player_movement.h  player_turret.h  player_turret_logic.h  player_weapon.h  player_weapon_logic.h
slime_shooter/src/player_base/: base_logic.h  base_object.h  fireplace_object.h
slime_shooter/src/projectiles/: enemy_projectile_object_pool.h  player_projectile_object_pool.h  projectile.h  projectile_logic.h
slime_shooter/src/scenes/: ai_demo_scene.h  game_scene.h  level_editor_scene.h  menu_scene.h  particle_scene.h  platformer_scene.h  stress_test_scene.h
slime_shooter/src/statistics/: statistic.h  statistic_type.h  statistics.h
slime_shooter/src/structures/: base_logic.h  base_object.h  bed_object.h  fireplace_light.h  fireplace_object.h  ghost-wall.h  wall.h
slime_shooter/src/ui/: button_click_listener.h  hud.h  score_text.h
slime_shooter/src/upgrades/: base_upgrade.h  base_upgrade_logic.h  base_upgrade_symbol.h
slime_shooter/src/world/: bed_object.h  fireplace_object.h
(+116 files in other folders)
